--- a/src/app/pages/market/market.component.html
+++ b/src/app/pages/market/market.component.html
@@ -1,11 +1,11 @@
 <div>
     <div>
-        <h4 for="heading">Listed Brand Assets</h4>
+        <h2 for="heading">Listed Brand Assets</h2>
     </div>
     <div class="grid">
-        <div class="col-3" *ngFor="let asset of assetsList">
+        <div class="col" *ngFor="let asset of assetsList">
             <div class="card flex justify-content-center">
-                <p-card header="{{asset.brand}}" subheader="{{asset.slogan}}" [style]="{ width: '360px' }">
+                <p-card header="{{asset.brand}}" subheader="{{asset.slogan}}" [style]="{ width: '360px'}">
                     <ng-template pTemplate="header">
                         <img alt="Card" src="{{asset.image}}" />
                     </ng-template>
